# wish

./: CMakeLists.txt  README.md
lib/common/: CMakeLists.txt  strings.cpp  utils.cpp
lib/common/include/lib/common/: strings.hpp  utils.hpp
lib/common/unittests/: strings_gtest.cpp
src/: main.cpp
src/include/: cmd.hpp  cmd_parser.hpp
